# rust-auth-actix

./: Cargo.toml
migrations/2021-10-27-221326_add_users/: up.sql
src/: handlers.rs  main.rs  models.rs
